removed a a lot of pom.xml duplications